# prometheus-metric-storage

prometheus-metric-storage/: Cargo.toml
prometheus-metric-storage-derive/: Cargo.toml
prometheus-metric-storage-derive/src/: lib.rs
prometheus-metric-storage/src/: lib.rs
prometheus-metric-storage/tests/: derive_tests.rs
prometheus-metric-storage/tests/compile_fail/: duplicate_field_label.rs  duplicate_field_label.stderr  duplicate_label.rs  duplicate_label.stderr  missing_help.rs  missing_help.stderr  redefined_subsystem.rs  redefined_subsystem.stderr  unexpected_param.rs  unexpected_param.stderr
