[package]
name = "prometheus-metric-storage"
version = "0.5.0"
authors = ["Tamika Nomara <taminomara@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/taminomara/prometheus-metric-storage"
homepage = "https://github.com/taminomara/prometheus-metric-storage"
documentation = "https://docs.rs/prometheus-metric-storage"
description = "Derive macro to instantiate and register prometheus metrics without having to write tons of boilerplate code"
readme = "../README.md"
rust-version = "1.80.0"

[dependencies]
prometheus = {version = "0.13", default_features=false}
prometheus-metric-storage-derive = { version = "0.5.0", path = "../prometheus-metric-storage-derive" }
